--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Profile</title>
+
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>Github Profile</h1>
+    <a href="./todo.html">Todo</a>
+    <a href="./post.html">Post</a>
+    <a href="./exchange.html">Exchange</a>
+    
+    <div class="search">
+      <input placeholder="Enter username" type="text" />
+      <button>Search</button>
+    </div>
+
+    <div class="content-github"></div>
 
     <script src="./index.js"></script>
   </body>
